comments out code that does not need to be rerun

--- a/Data_Exploration_and_Models.ipynb
+++ b/Data_Exploration_and_Models.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -1246,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -1270,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -1292,38 +1292,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1.751255</td>\n",
-       "      <td>1.043492</td>\n",
-       "      <td>-0.149183</td>\n",
-       "      <td>1.146708</td>\n",
+       "      <td>1.849069</td>\n",
+       "      <td>1.052317</td>\n",
+       "      <td>-0.145150</td>\n",
+       "      <td>1.142242</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>-0.098587</td>\n",
-       "      <td>1.056484</td>\n",
-       "      <td>0.207038</td>\n",
-       "      <td>-1.022741</td>\n",
+       "      <td>-0.102326</td>\n",
+       "      <td>1.065330</td>\n",
+       "      <td>0.215913</td>\n",
+       "      <td>-1.025161</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>-0.090879</td>\n",
-       "      <td>0.027242</td>\n",
-       "      <td>0.144543</td>\n",
-       "      <td>-0.995735</td>\n",
+       "      <td>-0.094195</td>\n",
+       "      <td>0.034379</td>\n",
+       "      <td>0.152569</td>\n",
+       "      <td>-0.998181</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>-0.098587</td>\n",
-       "      <td>-0.583374</td>\n",
-       "      <td>-0.255425</td>\n",
-       "      <td>-0.911718</td>\n",
+       "      <td>-0.102326</td>\n",
+       "      <td>-0.577250</td>\n",
+       "      <td>-0.252835</td>\n",
+       "      <td>-0.914243</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>-0.098587</td>\n",
-       "      <td>-0.963024</td>\n",
-       "      <td>-0.376249</td>\n",
-       "      <td>0.783633</td>\n",
+       "      <td>-0.102326</td>\n",
+       "      <td>-0.957531</td>\n",
+       "      <td>-0.375301</td>\n",
+       "      <td>0.779510</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1331,14 +1331,14 @@
       ],
       "text/plain": [
        "   amount_tsh  gps_height  population  date_recorded_offset_days\n",
-       "0    1.751255    1.043492   -0.149183                   1.146708\n",
-       "1   -0.098587    1.056484    0.207038                  -1.022741\n",
-       "2   -0.090879    0.027242    0.144543                  -0.995735\n",
-       "3   -0.098587   -0.583374   -0.255425                  -0.911718\n",
-       "4   -0.098587   -0.963024   -0.376249                   0.783633"
+       "0    1.849069    1.052317   -0.145150                   1.142242\n",
+       "1   -0.102326    1.065330    0.215913                  -1.025161\n",
+       "2   -0.094195    0.034379    0.152569                  -0.998181\n",
+       "3   -0.102326   -0.577250   -0.252835                  -0.914243\n",
+       "4   -0.102326   -0.957531   -0.375301                   0.779510"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2918,7 +2918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -5779,7 +5779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -5801,7 +5801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -5862,7 +5862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -5902,13 +5902,13 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>69572</td>\n",
-       "      <td>1.751255</td>\n",
-       "      <td>1.043492</td>\n",
+       "      <td>1.849069</td>\n",
+       "      <td>1.052317</td>\n",
        "      <td>34.938093</td>\n",
        "      <td>-9.856322</td>\n",
-       "      <td>-0.149183</td>\n",
+       "      <td>-0.145150</td>\n",
        "      <td>y1999</td>\n",
-       "      <td>1.146708</td>\n",
+       "      <td>1.142242</td>\n",
        "      <td>functional</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
@@ -5926,13 +5926,13 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>8776</td>\n",
-       "      <td>-0.098587</td>\n",
-       "      <td>1.056484</td>\n",
+       "      <td>-0.102326</td>\n",
+       "      <td>1.065330</td>\n",
        "      <td>34.698766</td>\n",
        "      <td>-2.147466</td>\n",
-       "      <td>0.207038</td>\n",
+       "      <td>0.215913</td>\n",
        "      <td>y2010</td>\n",
-       "      <td>-1.022741</td>\n",
+       "      <td>-1.025161</td>\n",
        "      <td>functional</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
@@ -5950,13 +5950,13 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>34310</td>\n",
-       "      <td>-0.090879</td>\n",
-       "      <td>0.027242</td>\n",
+       "      <td>-0.094195</td>\n",
+       "      <td>0.034379</td>\n",
        "      <td>37.460664</td>\n",
        "      <td>-3.821329</td>\n",
-       "      <td>0.144543</td>\n",
+       "      <td>0.152569</td>\n",
        "      <td>y2009</td>\n",
-       "      <td>-0.995735</td>\n",
+       "      <td>-0.998181</td>\n",
        "      <td>functional</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
@@ -5974,13 +5974,13 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>67743</td>\n",
-       "      <td>-0.098587</td>\n",
-       "      <td>-0.583374</td>\n",
+       "      <td>-0.102326</td>\n",
+       "      <td>-0.577250</td>\n",
        "      <td>38.486161</td>\n",
        "      <td>-11.155298</td>\n",
-       "      <td>-0.255425</td>\n",
+       "      <td>-0.252835</td>\n",
        "      <td>Other</td>\n",
-       "      <td>-0.911718</td>\n",
+       "      <td>-0.914243</td>\n",
        "      <td>non functional</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
@@ -5998,13 +5998,13 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>19728</td>\n",
-       "      <td>-0.098587</td>\n",
-       "      <td>-0.963024</td>\n",
+       "      <td>-0.102326</td>\n",
+       "      <td>-0.957531</td>\n",
        "      <td>31.130847</td>\n",
        "      <td>-1.825359</td>\n",
-       "      <td>-0.376249</td>\n",
+       "      <td>-0.375301</td>\n",
        "      <td>y0</td>\n",
-       "      <td>0.783633</td>\n",
+       "      <td>0.779510</td>\n",
        "      <td>functional</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
@@ -6026,18 +6026,18 @@
       ],
       "text/plain": [
        "      id  amount_tsh  gps_height  longitude   latitude  population  \\\n",
-       "0  69572    1.751255    1.043492  34.938093  -9.856322   -0.149183   \n",
-       "1   8776   -0.098587    1.056484  34.698766  -2.147466    0.207038   \n",
-       "2  34310   -0.090879    0.027242  37.460664  -3.821329    0.144543   \n",
-       "3  67743   -0.098587   -0.583374  38.486161 -11.155298   -0.255425   \n",
-       "4  19728   -0.098587   -0.963024  31.130847  -1.825359   -0.376249   \n",
+       "0  69572    1.849069    1.052317  34.938093  -9.856322   -0.145150   \n",
+       "1   8776   -0.102326    1.065330  34.698766  -2.147466    0.215913   \n",
+       "2  34310   -0.094195    0.034379  37.460664  -3.821329    0.152569   \n",
+       "3  67743   -0.102326   -0.577250  38.486161 -11.155298   -0.252835   \n",
+       "4  19728   -0.102326   -0.957531  31.130847  -1.825359   -0.375301   \n",
        "\n",
        "  construction_year  date_recorded_offset_days    status_group  funder_Danida  \\\n",
-       "0             y1999                   1.146708      functional              0   \n",
-       "1             y2010                  -1.022741      functional              0   \n",
-       "2             y2009                  -0.995735      functional              0   \n",
-       "3             Other                  -0.911718  non functional              0   \n",
-       "4                y0                   0.783633      functional              0   \n",
+       "0             y1999                   1.142242      functional              0   \n",
+       "1             y2010                  -1.025161      functional              0   \n",
+       "2             y2009                  -0.998181      functional              0   \n",
+       "3             Other                  -0.914243  non functional              0   \n",
+       "4                y0                   0.779510      functional              0   \n",
        "\n",
        "            ...             date_recorded_month_Dec  date_recorded_month_Feb  \\\n",
        "0           ...                                   0                        0   \n",
@@ -6070,7 +6070,7 @@
        "[5 rows x 19454 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6104,17 +6104,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "##To run (classifier without optimizing for C\n",
-    "mlr_classifier = LogisticRegression(penalty=\"l2\",solver='newton-cg', multi_class='multinomial')\n",
+    "mlr_classifier = LogisticRegression(penalty=\"l2\",solver='newton-cg', multi_class='multinomial')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "#feat_train and lab_train analogous to Xtrain and ytrain\n",
     "feat_train = df_indicators.drop('status_group',axis=1)\n",
-    "lab_train = pd.DataFrame(df_indicators.status_group)\n",
+    "lab_train = pd.DataFrame(df_indicators.status_group)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "mlr_classifier = mlr_classifier.fit(feat_train, lab_train)"
    ]
   },
