optimizes hyperparameter C in multinomial logistic regression

--- a/Data_Exploration_and_Models_Lily.ipynb
+++ b/Data_Exploration_and_Models_Lily.ipynb
@@ -5600,13 +5600,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "from sklearn.naive_bayes import GaussianNB, BernoulliNB\n",
+    "#TO RUN\n",
+    "from sklearn.naive_bayes import GaussianNB, BernoulliNB, MultinomialNB\n",
     "\n",
     "#separate categorical and continuous\n",
     "cont_feat_train = feat_train[STANDARDIZABLE].values\n",
@@ -5732,27 +5733,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(41580, 135)\n",
-      "(17820, 135)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print cat_feat_train1.shape\n",
-    "print cat_feat_test1.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 16,
    "metadata": {
     "collapsed": false
@@ -5838,6 +5818,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Bernoulli vs. Multinomial--why is Multinomial better?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Frac of correctly labeled points 0.694163860831\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/lilyzhang/anaconda/lib/python2.7/site-packages/sklearn/utils/validation.py:449: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[7730,  697, 2330],\n",
+       "       [ 473,  316,  247],\n",
+       "       [1423,  280, 4324]])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#TO RUN\n",
+    "#fit the categorical variables to a Multinomial Naive Bayes\n",
+    "mnb_clf1 = MultinomialNB()\n",
+    "mnb_clf1.fit(cat_feat_train1, lab_train)\n",
+    "\n",
+    "print \"Frac of correctly labeled points\",float((lab_test.values.transpose().tolist() == mnb_clf1.predict(cat_feat_test1)).sum())/lab_test.shape[0]\n",
+    "confusion_matrix(mnb_clf1.predict(cat_feat_test1),lab_test)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -5871,16 +5903,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The one problem with this above approach, however, is that .predict_proba(X) method will return posteriors normalized over all classes. What we want is the unnormalized probabilities so that we can multiply them together. However, if they are normalized differently (which they are, since they are normalized for the classes), the product of such probabilities is not very reliable.\n",
-    "\n",
-    "We try a simpler version, namely separating the two types of variables completely."
+    "The one problem with this above approach, however, is that .predict_proba(X) method will return posteriors normalized over all classes. What we want is the unnormalized probabilities so that we can multiply them together. However, if they are normalized differently (which they are, since they are normalized for the classes), the product of such probabilities is not very reliable.http://stats.stackexchange.com/questions/93928/naive-bayes-continuous-and-categorical-predictors"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "First we fit a Bernoulli Naive Bayes model on the categorical classifiers only and measure the model's accuracy."
+    "#TODO: turn quantitative variables to categorical ones\n"
    ]
   },
   {
@@ -5971,183 +6005,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[  9.02936047e-02,  -3.92806014e-02,   3.65107145e-02,\n",
-       "          4.58267779e-02,   7.51043523e-02,  -6.40231816e-02,\n",
-       "         -3.20877970e-01,   1.68882242e-01,   9.42927723e-02,\n",
-       "          1.87625066e-01,  -6.83330165e-02,  -9.49547924e-02,\n",
-       "         -1.74798377e-01,  -1.73347913e-01,   2.41024273e-01,\n",
-       "          2.88392763e-01,  -2.70918150e-01,  -2.65160013e-01,\n",
-       "         -6.92851900e-01,   1.82958195e-01,  -7.47912900e-01,\n",
-       "         -1.16930508e-01,  -6.77991583e-01,  -5.03082924e-01,\n",
-       "          6.93101122e-02,   4.08618706e-01,  -1.88397208e-01,\n",
-       "          6.45144908e-02,  -1.43600047e-01,   8.38096471e-03,\n",
-       "          6.69582641e-04,  -1.43759709e-01,  -7.57266504e-02,\n",
-       "          3.77844508e-01,   2.30684729e-01,  -2.49794833e-01,\n",
-       "          6.45856126e-01,  -3.28075049e-02,  -3.77883043e-01,\n",
-       "         -1.45613492e-01,  -2.28600870e-01,   1.99544412e-01,\n",
-       "         -1.80865309e-02,  -1.61839128e-01,  -1.22271975e-01,\n",
-       "         -5.35011524e-01,   8.89391096e-02,   6.61202913e-02,\n",
-       "         -2.87263861e-01,   2.97584403e-01,  -1.32242441e-01,\n",
-       "          7.68223670e-02,   1.56111688e-02,   2.92418332e-01,\n",
-       "         -3.99675915e-01,  -3.64222108e-02,  -1.35977794e-01,\n",
-       "          2.78243961e-01,  -4.04714466e-01,  -2.14352771e-01,\n",
-       "         -4.33768329e-01,   3.48807756e-01,   4.19441621e-02,\n",
-       "          8.35491609e-02,  -1.74154100e-01,   4.82673947e-01,\n",
-       "         -2.70671547e-02,   1.09573886e-01,   2.57982495e-01,\n",
-       "          3.02442561e-01,  -2.09414692e-02,   2.43692973e-01,\n",
-       "         -1.28400548e-01,  -6.09975207e-02,   2.57128156e-01,\n",
-       "         -6.34367555e-02,  -1.91871175e-01,  -1.12959399e-01,\n",
-       "          8.14140498e-02,  -4.43864482e-02,  -1.33434367e-01,\n",
-       "         -1.28239816e-01,  -2.09414692e-02,   3.49557601e-01,\n",
-       "         -1.73956920e-01,  -6.34367555e-02,   8.14140498e-02,\n",
-       "         -4.43864482e-02,  -1.28239816e-01,  -2.51453027e-01,\n",
-       "          2.73202533e-01,  -3.57100823e-01,   5.39126756e-02,\n",
-       "          5.47589532e-01,   8.87138706e-02,   4.16878373e-02,\n",
-       "         -1.58626069e-01,  -2.46083263e-01,   4.60394103e-02,\n",
-       "         -1.67852745e-01,   1.29980310e-01,   1.38767113e-01,\n",
-       "         -8.38982903e-02,   5.39126756e-02,   4.16878373e-02,\n",
-       "         -1.50459093e-01,   8.94446857e-02,   2.75981002e-02,\n",
-       "         -2.93197784e-01,  -2.11740047e-02,  -9.67841131e-02,\n",
-       "          3.76946002e-01,  -8.28226438e-02,  -7.10652364e-02,\n",
-       "          2.07045680e-01,  -2.69170679e-01,   7.46493158e-01,\n",
-       "         -6.83821796e-02,  -4.27970417e-01,   3.61999260e-02,\n",
-       "         -1.53140009e-01,  -1.44687233e+00,   5.11871682e-01,\n",
-       "          1.88960095e-01,   3.60126575e-01,   3.85924221e-01,\n",
-       "         -9.30020838e-02,  -1.76159675e-01,   2.03679234e-01,\n",
-       "          3.26843009e-01,  -2.39478399e-01,  -1.13360110e-01,\n",
-       "          9.14882684e-02,  -1.14873925e-01,  -8.87950660e-02,\n",
-       "          2.03679234e-01,   5.59795680e-01,  -1.89389870e-01,\n",
-       "          3.06889598e-01,  -1.25891200e-01,   3.80682743e-01,\n",
-       "         -9.32076708e-01,  -2.08378210e-01,   9.85720067e-02,\n",
-       "          1.87348766e-01,  -6.16390811e-02,  -2.13593755e-01,\n",
-       "         -3.68239459e-02,   1.28338883e-01,   4.64514852e-02,\n",
-       "          1.62347276e-01,  -8.62210548e-02,  -6.04669312e-02,\n",
-       "          4.40748029e-02],\n",
-       "       [  7.39200637e-02,   2.32713352e-01,   2.43399380e-02,\n",
-       "         -1.85995282e-01,  -3.89193220e-01,  -5.00281435e-01,\n",
-       "          1.96153704e-01,  -6.70188329e-01,  -2.71701239e-01,\n",
-       "         -3.68098657e-01,  -2.21098557e-01,   1.16874105e-01,\n",
-       "         -2.16227141e-01,   2.31416217e-01,  -3.79347266e-01,\n",
-       "         -5.17914748e-01,  -3.05084107e-01,  -1.50938827e-01,\n",
-       "          2.01952514e-01,  -8.21354337e-01,  -7.04638385e-02,\n",
-       "         -4.88363265e-01,  -2.04308503e-01,  -2.70286239e-01,\n",
-       "         -8.94026990e-02,  -3.99351369e-01,   3.53724596e-01,\n",
-       "          1.53927595e-01,   5.36908919e-01,  -3.34233601e-01,\n",
-       "         -3.11342123e-01,   2.77010149e-01,  -1.87257752e-01,\n",
-       "         -4.75825245e-01,  -8.63289385e-01,   1.43900695e+00,\n",
-       "         -4.75391420e-01,  -3.97255333e-03,  -3.23762149e-02,\n",
-       "          1.63657355e-01,  -2.47798522e-02,  -3.29949185e-01,\n",
-       "         -1.22009599e+00,   5.07378970e-01,   8.10312384e-01,\n",
-       "          3.11226522e-01,   3.34363561e-02,   1.08862052e-01,\n",
-       "         -3.42076090e-01,  -2.14020807e-01,   7.49351278e-01,\n",
-       "         -2.43136108e-01,   5.00058561e-02,   5.16588415e-02,\n",
-       "          2.22845188e-01,  -2.62875764e-03,  -8.58988897e-02,\n",
-       "         -2.29936502e-01,   2.31493120e-01,  -7.93278796e-02,\n",
-       "          3.37350381e-01,  -4.88181654e-01,  -7.83334559e-02,\n",
-       "          9.97675608e-02,   3.12896643e-01,  -4.80500475e-01,\n",
-       "          4.34732370e-02,  -1.57142109e-01,  -1.68753513e-01,\n",
-       "         -2.22228085e-01,   2.20678140e-01,  -1.48298054e-01,\n",
-       "         -3.06883534e-01,   1.61033793e-01,   3.03681670e-01,\n",
-       "         -2.26723589e-01,   5.19248725e-02,  -2.87778939e-01,\n",
-       "          1.77580135e-01,   2.77903441e-02,   1.67900013e-01,\n",
-       "          8.13069471e-02,   2.20678140e-01,  -1.53903118e-01,\n",
-       "         -1.26745146e-01,  -2.26723589e-01,   1.77580135e-01,\n",
-       "          2.77903441e-02,   8.13069471e-02,  -1.03499422e+00,\n",
-       "         -1.12980642e-01,   3.07260107e-01,   2.85077777e-02,\n",
-       "          1.41494538e-01,   3.46757448e-01,   2.57174555e-02,\n",
-       "          6.33599387e-02,   2.34509246e-01,  -7.90443867e-02,\n",
-       "          1.42595094e-01,  -6.31986413e-02,  -3.12232988e-01,\n",
-       "          1.94279464e-01,   2.85077777e-02,   2.57174555e-02,\n",
-       "          6.37120046e-02,   1.91337880e-01,   3.25098146e-01,\n",
-       "          3.27244215e-03,   2.16230413e-01,  -1.62528533e-01,\n",
-       "         -1.86840335e-01,  -3.86586300e-01,   4.02627992e-01,\n",
-       "          3.89661574e-01,  -3.37839313e-01,  -5.78202613e-01,\n",
-       "          1.18244554e-01,   4.71423120e-01,  -1.10676290e-01,\n",
-       "         -3.55255309e-01,  -5.73201275e-01,   3.63448039e-01,\n",
-       "          5.07488335e-01,   3.28928521e-01,  -6.26679907e-01,\n",
-       "         -2.19184103e-03,  -4.81074665e-01,  -1.40664244e-01,\n",
-       "          3.99455106e-01,   1.82931732e-01,  -9.10746050e-02,\n",
-       "          1.32602230e-01,   3.93357836e-02,   1.01312174e-01,\n",
-       "         -1.40664244e-01,  -5.51590404e-01,   1.43819932e-01,\n",
-       "         -5.75398294e-02,  -4.83183211e-02,   2.43439940e-01,\n",
-       "          2.70172397e-01,   1.99671097e-01,   1.92371025e-01,\n",
-       "         -5.15383248e-03,   2.23907621e-01,   4.94875564e-01,\n",
-       "          1.69152072e-01,  -3.02930886e-01,   5.68560603e-02,\n",
-       "         -6.19912368e-01,  -1.67077359e-01,  -6.46896841e-02,\n",
-       "         -1.77085597e-01],\n",
-       "       [ -1.64213668e-01,  -1.93432750e-01,  -6.08506525e-02,\n",
-       "          1.40168504e-01,   3.14088868e-01,   5.64304617e-01,\n",
-       "          1.24724267e-01,   5.01306087e-01,   1.77408466e-01,\n",
-       "          1.80473592e-01,   2.89431574e-01,  -2.19193127e-02,\n",
-       "          3.91025518e-01,  -5.80683035e-02,   1.38322993e-01,\n",
-       "          2.29521985e-01,   5.76002257e-01,   4.16098840e-01,\n",
-       "          4.90899386e-01,   6.38396142e-01,   8.18376739e-01,\n",
-       "          6.05293773e-01,   8.82300087e-01,   7.73369163e-01,\n",
-       "          2.00925868e-02,  -9.26733648e-03,  -1.65327388e-01,\n",
-       "         -2.18442086e-01,  -3.93308873e-01,   3.25852637e-01,\n",
-       "          3.10672540e-01,  -1.33250440e-01,   2.62984402e-01,\n",
-       "          9.79807371e-02,   6.32604656e-01,  -1.18921212e+00,\n",
-       "         -1.70464705e-01,   3.67800582e-02,   4.10259258e-01,\n",
-       "         -1.80438622e-02,   2.53380722e-01,   1.30404773e-01,\n",
-       "          1.23818253e+00,  -3.45539841e-01,  -6.88040408e-01,\n",
-       "          2.23785002e-01,  -1.22375466e-01,  -1.74982343e-01,\n",
-       "          6.29339950e-01,  -8.35635958e-02,  -6.17108837e-01,\n",
-       "          1.66313741e-01,  -6.56170249e-02,  -3.44077173e-01,\n",
-       "          1.76830727e-01,   3.90509684e-02,   2.21876683e-01,\n",
-       "         -4.83074594e-02,   1.73221346e-01,   2.93680650e-01,\n",
-       "          9.64179478e-02,   1.39373898e-01,   3.63892938e-02,\n",
-       "         -1.83316722e-01,  -1.38742543e-01,  -2.17347242e-03,\n",
-       "         -1.64060824e-02,   4.75682228e-02,  -8.92289824e-02,\n",
-       "         -8.02144756e-02,  -1.99736671e-01,  -9.53949188e-02,\n",
-       "          4.35284081e-01,  -1.00036273e-01,  -5.60809826e-01,\n",
-       "          2.90160345e-01,   1.39946303e-01,   4.00738338e-01,\n",
-       "         -2.58994185e-01,   1.65961041e-02,  -3.44656467e-02,\n",
-       "          4.69328689e-02,  -1.99736671e-01,  -1.95654483e-01,\n",
-       "          3.00702065e-01,   2.90160345e-01,  -2.58994185e-01,\n",
-       "          1.65961041e-02,   4.69328689e-02,   1.28644725e+00,\n",
-       "         -1.60221890e-01,   4.98407161e-02,  -8.24204533e-02,\n",
-       "         -6.89084070e-01,  -4.35471318e-01,  -6.74052928e-02,\n",
-       "          9.52661301e-02,   1.15740171e-02,   3.30049764e-02,\n",
-       "          2.52576510e-02,  -6.67816692e-02,   1.73465876e-01,\n",
-       "         -1.10381174e-01,  -8.24204533e-02,  -6.74052928e-02,\n",
-       "          8.67470882e-02,  -2.80782565e-01,  -3.52696247e-01,\n",
-       "          2.89925342e-01,  -1.95056409e-01,   2.59312646e-01,\n",
-       "         -1.90105667e-01,   4.69408944e-01,  -3.31562755e-01,\n",
-       "         -5.96707254e-01,   6.07009992e-01,  -1.68290545e-01,\n",
-       "         -4.98623743e-02,  -4.34527022e-02,   7.44763636e-02,\n",
-       "          5.08395318e-01,   2.02007360e+00,  -8.75319721e-01,\n",
-       "         -6.96448430e-01,  -6.89055096e-01,   2.40755686e-01,\n",
-       "          9.51939249e-02,   6.57234340e-01,  -6.30149900e-02,\n",
-       "         -7.26298115e-01,   5.65466671e-02,   2.04434715e-01,\n",
-       "         -2.24090498e-01,   7.55381417e-02,  -1.25171079e-02,\n",
-       "         -6.30149900e-02,  -8.20527597e-03,   4.55699385e-02,\n",
-       "         -2.49349768e-01,   1.74209521e-01,  -6.24122683e-01,\n",
-       "          6.61904311e-01,   8.70711362e-03,  -2.90943032e-01,\n",
-       "         -1.82194934e-01,  -1.62268540e-01,  -2.81281809e-01,\n",
-       "         -1.32328127e-01,   1.74592002e-01,  -1.03307545e-01,\n",
-       "          4.57565092e-01,   2.53298414e-01,   1.25156615e-01,\n",
-       "          1.33010794e-01]])"
-      ]
-     },
-     "execution_count": 174,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mlr_clf.coef_"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 172,
    "metadata": {
     "collapsed": false
@@ -6170,7 +6027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -6180,11 +6037,11 @@
      "output_type": "stream",
      "text": [
       "############# based on standard predict ################\n",
-      "Accuracy on training data: 0.74\n",
-      "Accuracy on test data:     0.73\n",
-      "[[8590   78 1045]\n",
-      " [ 929   99  245]\n",
-      " [2449   46 4339]]\n",
+      "Accuracy on training data: 0.73\n",
+      "Accuracy on test data:     0.74\n",
+      "[[8616   52  958]\n",
+      " [ 950  107  236]\n",
+      " [2437   45 4419]]\n",
       "########################################################\n"
      ]
     },
@@ -6198,7 +6055,7 @@
     }
    ],
    "source": [
-    "mlr_clf2 = LogisticRegression(penalty=\"l2\",solver='newton-cg', multi_class='multinomial',C=100)\n",
+    "mlr_clf2 = LogisticRegression(penalty=\"l2\",solver='newton-cg', multi_class='multinomial',C=1000)\n",
     "mlr_clf2 = mlr_clf2.fit(feat_train, lab_train)\n",
     "training_accuracy = mlr_clf2.score(feat_train, lab_train)\n",
     "test_accuracy = mlr_clf2.score(feat_test, lab_test)\n",
@@ -6290,15 +6147,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 4 µs, sys: 2 µs, total: 6 µs\n",
+      "Wall time: 9.06 µs\n",
+      "using mask\n",
+      "BEST: {'C': 100.0}\n",
+      "############# based on standard predict ################\n",
+      "Accuracy on training data: 0.73\n",
+      "Accuracy on test data:     0.74\n",
+      "[[8616   52  958]\n",
+      " [ 950  107  236]\n",
+      " [2437   45 4419]]\n",
+      "########################################################\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/lilyzhang/anaconda/lib/python2.7/site-packages/IPython/kernel/__main__.py:6: FutureWarning: comparison to `None` will result in an elementwise object comparison in the future.\n"
+     ]
+    }
+   ],
    "source": [
     "#TODO: getting a class error\n",
     "feat_cols=list(df_formatted.columns)\n",
     "feat_cols.remove(u'status_group')\n",
+    "%time\n",
     "clfmlr, Xtrain, ytrain, Xtest, ytest = do_classify(LogisticRegression(penalty=\"l2\",solver='newton-cg', multi_class='multinomial'), \n",
     "            {\"C\": [0.001, 0.01, 0.1, 1.0, 10.0, 100.0]}, df_formatted,feat_cols, u'status_group',1, mask=mask)"
    ]
