--- a/Lily1.ipynb
+++ b/Lily1.ipynb
@@ -3031,6 +3031,15 @@
     "                                                       df_formatted, feat_cols, 'status_group', 1, mask=mask, \n",
     "                                                       n_jobs = 4, score_func='f1')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
